1.000002 - 2012-05-05
  - improve explanation and add more examples to the SYNOPSIS

1.000001 - 2012-05-03
  - correct NAME in Makefile.PL

1.000000 - 2012-05-03
  - initial release